# movie-rag

./: .gitignore  CLAUDE.md  LICENSE  MERGE_MSG:wq  Makefile  README.md  environment.yml  pyproject.toml
.github/: [to-add]copilot-deployment.md  [to-add]copilot-ml.md  [to-add]copilot-rag.md  copilot-instructions.md  pull_request_template.md
datasets/rotten-tomatoes-reviews/: README.md
notebooks/: 1-test_emb.ipynb  10-multimodal-full-chain.ipynb  11-multimodal-agent.ipynb  11-multimodal-react-agent.ipynb  12-plan_execute.ipynb  2-chunking.ipynb  3-retrieval-faiss.py.ipynb  3-retrieval-text.ipynb  4-bm25_from_scratch.ipynb  6-langchain-rag.ipynb  7-langchain-rerank.ipynb  8-hyde-langsmith.ipynb  8-hyde-stream-langsmith.ipynb  9-selfrag-ragas.ipynb  chunking.ipynb  prep_rotten_tomatoes_data.ipynb  retrieval-faiss.py.ipynb  test_emb.ipynb
notebooks/data_prep/: Untitled.ipynb  create_omdb_plots_data.ipynb  create_omdb_posters_data.ipynb  create_sqlite.ipynb  prep_rotten_tomatoes_data.ipynb
src/: __init__.py  document_creators.py  prep_rotten_tomatoes_data.py
src/agents/: adaptive_plan_execute.py  base_movie_agent.py  hitl_adaptive_plan_execute.py  movie_agent.py  plan_execute.py  react.py  tools.py
src/data/: chunk.py  chunking.py  document_creators.py  sqlite_database.py
src/langchain/: chains.py  chunk.py  loaders.py  observability.py  prompts.py  ragas.py  reranker.py  retrievers.py  streaming.py
src/retrievers/: base.py  dense_retriever.py  factory.py  hybrid_retriever.py  in_memory_dense_retriever.py  reranker.py  sparse_retriever.py  visual_retriever.py
(+14 files in other folders)
