[tool.poetry]
name = "movie-rag"
version = "0.1.0"
description = "Movie review agent"
authors = ["Saghar Irandoust"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = ">=2.1.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scipy = "^1.11.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
path = "^17.1.1"

[tool.poetry.group.rag-agent.dependencies]
faiss-cpu = "^1.12.0"
chromadb = "^1.1.0"
langchain = "^0.3.27"
langchain-community = "^0.3.30"
langchain-openai = "^0.3.35"
transformers = "^4.30.0"
sentence-transformers = "^5.1.1"
openai = "^1.0.0"
clip = {git = "https://github.com/openai/CLIP.git"}
tiktoken = "^0.11.0"
nltk = "^3.9.2"
rank-bm25 = "^0.2.2"
langchain-cohere = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"
ruff = "^0.13.2"

[tool.poetry.group.ml.dependencies]
torch = "^2.4.0"
lightning = "^2.4.0"
wandb = "^0.17.0"
# tensorflow = "^2.13.0"
# transformers = "^4.30.0"
# datasets = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true